2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Symrev’ with ‘struct link’ + ‘struct u_symdef’.

	* rcs.c (struct Symrev): Delete.
	(struct u_symdef): New.
	(assoclst): Change type to ‘struct link’.
	(nextassoc): Delete var.
	(getassoclst): Don't take ‘flag’; instead, take ‘struct link **’;
	compute override flag from first char in ‘sp’; add local macro
	to skip whitespace; create a ‘struct u_symdef’; use ‘extend’.
	(doassoc): Update to walk ‘struct link’ list.
	(main): Update call to ‘getassoclst’; combine ‘-n’, ‘-N’ handling.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rcs: Fix bug: Correctly delete symbolic name.

	Regression introduced 2010-04-28,
	"Replace ‘struct assoc’ with ‘struct wlink’ + ‘struct symdef’".
	* rcs.c (doassoc): Use local variable of type
	‘struct symdef *’ to assign from ‘void *’ instead of
	typecast; also, assign from ‘tp->entry’, not ‘tp’.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Make ‘keepdate’ actually keep the date.

	Regression introduced 2010-04-12,
	"Use spaces for "ci -k" support".
	* rcskeep.c (keepdate): Use ‘intern’, not ‘finish_string’.

2010-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: parse_revpairs

	* rcsutil.c (parse_revpairs): New func.
	* base.h (parse_revpairs): New func decl.
	* rcs.c (putdelrev): New static func.
	(getdelrev): Delete func.
	(main): Use ‘parse_revpairs’.
	* rlog.c (putrevpairs): New static func.
	(getrevpairs): Delete func.
	(main): Use ‘parse_revpairs’.

2010-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	ident: Make error message more conventional.

	* ident.c (reportError): Delete func.
	(scanfile, main): Use ‘syserror_errno’.

2010-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct link’ more.

	* rlog.c (struct rcslockers): Delete.
	(struct stateattri, struct authors): Likewise.
	(authorlist, lockerlist, statelist): Change type to ‘struct link *’.
	(getlocker, getauthor, getstate): Use ‘extend’.