@@ -1,5 +1,13 @@
 2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	rcs: Fix bug: Correctly erase/append access-list entries.
+
+	Regression introduced 2010-04-28,
+	"Use ‘struct link’ instead of ‘struct access’".
+	* t001.test: Add some access-list modification tests.
+
+2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	rcs: Fix bug: Correctly delete symbolic name.
 
 	Regression introduced 2010-04-28,
